# Mail_Spinner

./: CMakeLists.txt  customer.c  customers.csv  items.c  main.c  spin_menu.c  spin_menu.h
includes/general/: list.h  queue.h  stack.h
includes/in_game/: customer.h  func_definitions.h  items.h  parse_csv.h  printer.h  spin_menu.h
libs/: list.lib  queue.lib  stack.lib
src/: customer.c  items.c  parse_csv.c  printer.c  spin_menu.c
